# onboarding-portal-v3-hrqnmc

./: .gitignore  AGENT_D_COMPLETION_STATUS.md  AI_SWARM_MISSION_PROMPT.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETION_SUMMARY.md  ARCHITECTURE_INFRASTRUCTURE_COMPLETION_REPORT.md  BACKEND_COMPILATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_REPORT.md  DOCUMENTATION_AND_DEPLOYMENT_READINESS_REPORT.md  FINAL_PUSH_STATUS.md  FORENSICS_ANALYSIS_REPORT.md  FORENSICS_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSION_STATUS_COMPARISON.md  PULL_REQUEST_BODY.md  README.md  SECURITY.md  SECURITY_LGPD_COMPLIANCE_AUDIT_REPORT.md  SPRINT_3_COMPLETION.md  SPRINT_3_VERIFICATION_REPORT.md  SPRINT_COMPLETION_REPORT.md  SWARM_STATUS_SUMMARY.md  TESTING_SUMMARY.md  TEST_INFRASTRUCTURE_REPORT.md  backend_build_verification.txt  build_output.txt  build_verification.txt  flyway.conf
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci-backend-go.yml  ci-backend-java.yml  ci-backend-nodejs.yml  ci-backend-python.yml  ci.yml  security-scan.yml
docs/: CONFLICT_ANALYSIS_REPORT.md
docs/hive-mind/: conflict-resolution-strategy.md  github-comparison-analysis.md  pre-sync-validation.md
documentation/: DATABASE_SETUP_GUIDE.md  Input Prompt.md  PLATFORM_STATUS_REPORT.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/security/: network-policies.yml  pod-security-policies.yml  rbac.yml  secrets-encryption.yml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.json
src/backend/health-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/health-service/src/: main.py
src/backend/health-service/src/api/: health_assessment.py
src/backend/health-service/src/config/: settings.py
src/backend/health-service/src/models/: questionnaire.py
src/backend/health-service/src/services/: llm_service.py  risk_assessment.py
src/backend/health-service/src/utils/: validators.py
src/backend/health-service/tests/: test_health_assessment.py  test_risk_assessment.py
src/web/: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
tests/: TEST_COVERAGE_ANALYSIS.md
tests/templates/: GoServiceTest.template.go  IntegrationTest.template.ts  JavaServiceTest.template.java  PythonAPITest.template.py  (+1 more)
(+393 files in other folders)
